body added to model doc
