# controllers/playerController.js
@@ -1,7 +1,17 @@
 const Player = require('../models/playerModel');
 
 exports.createPlayer = async (req, res, next) => {
-    const player = await Player.create(req.body);
+
+    const playerToCreate = {
+        "firstName": req.body.firstName,
+        "lastName": req.body.lastName,
+        "birthDate": req.body.birthDate,
+        "team": req.body.team,
+        "isHealthy": req.body.isHealthy,
+        "bestFoot": req.body.bestFoot,
+        "position": req.body.position
+    };
+    const player = await Player.create(playerToCreate);
     res.status(201).json({
         status: 'success',
         player
